// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="measure center sans-serif ph2 "
>
  <h1
    className="lh-title fw1 f2"
  >
    <img
      alt="illustration by supasavina"
      className="mr2 h3 w3 v-mid"
      src="/static/logo.png"
    />
    melkat.link
  </h1>
  <footer
    className="lh-copy tc"
  >
    <p>
      a link blog from 
      <a
        href="https://melaniekat.com"
        rel="me"
      >
        melanie kat
      </a>
       &lt;3
    </p>
    <p>
      powered by 
      <a
        href="https://raindrop.io"
      >
        raindrop.io
      </a>
    </p>
  </footer>
</main>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="measure center sans-serif ph2 "
>
  <h1
    className="lh-title fw1 f2"
  >
    <img
      alt="illustration by supasavina"
      className="mr2 h3 w3 v-mid"
      src="/static/logo.png"
    />
    melkat.link
  </h1>
  <b>
    #content
  </b>
  <footer
    className="lh-copy tc"
  >
    <p>
      a link blog from 
      <a
        href="https://melaniekat.com"
        rel="me"
      >
        melanie kat
      </a>
       &lt;3
    </p>
    <p>
      powered by 
      <a
        href="https://raindrop.io"
      >
        raindrop.io
      </a>
    </p>
  </footer>
</main>
`;
